--- a/thegaminghollow/config.toml
+++ b/thegaminghollow/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://thegaminghollow.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'The Gaming Hollow'
 theme = 'ananke'
